# fpl-planner

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  config.yaml  dev-requirements.txt  fpl_plan.md  mypy.ini  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.claude/: SPRINT1_SUMMARY.md  SPRINT2_SUMMARY.md  SPRINT3_SUMMARY.md  SPRINT4_SUMMARY.md  TODO_ROADMAP.md  collection_patterns.md  data_models.md  fpl_api_reference.md
app/: streamlit_app.py
app/pages/: 1_📊_Form_Analysis.py
app/utils/: __init__.py  components.py  data_loader.py  formatters.py
examples/: data_collection_example.py
notebooks/: explainer.ipynb
optimiser/: constraints.py  expected_points.py  solver.py  utils.py
scripts/: collect_current_season.py  example_usage.py  fetch_data.py  import_historical_data.py  optimise.py  update_latest_gameweeks.py  validate_streamlit_pages.py  visualise.py
src/: __init__.py  data_collection.py  data_validation.py  feature_engineering.py  forecasting.py
src/fpl/: __init__.py
src/fpl/api/: __init__.py  client.py  endpoints.py  exceptions.py
src/fpl/core/: __init__.py  models.py
src/fpl/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_basic.py  test_feature_engineering.py  test_forecasting.py
tests/app/: __init__.py  test_form_analysis_page.py  test_main_page.py
tests/integration/: __init__.py  test_api_integration.py  test_streamlit_import.py
tests/unit/: test_app_data_loader.py  test_app_formatters.py  test_client.py  test_collectors.py  test_components.py  test_helpers.py  test_models.py  test_storage.py
